...
    func neverEndingMethod() -> Int {
        sleep(999999999)
        return 1
    }
    
    func setButton(enabled: Bool) {
        actionButton.setTitle(enabled ? "Action" : "🐴", for: .normal)
        actionButton.setTitleColor(enabled ? .green : .red, for: .normal)
        actionButton.isEnabled = enabled
        
    }
    
    func buttonTitle() -> String? {
...
